# kid-o_ta-chu

./: README.md  app.py  del.py  pyproject.toml  requirements.txt
